--- a/Automation.ipynb
+++ b/Automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d79cdda1",
+   "id": "f2b218c6",
    "metadata": {},
    "source": [
     "#### import"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c587dcb",
+   "id": "6289a6fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "846fc1f8",
+   "id": "d79a2752",
    "metadata": {},
    "source": [
     "#### read & load dataset"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8c09fd1f",
+   "id": "50759d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f584b02b",
+   "id": "3fc7b258",
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +195,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "843106df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10037 entries, 0 to 10036\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column               Non-Null Count  Dtype         \n",
+      "---  ------               --------------  -----         \n",
+      " 0   user_id              10037 non-null  object        \n",
+      " 1   date_served          10021 non-null  datetime64[ns]\n",
+      " 2   marketing_channel    10022 non-null  object        \n",
+      " 3   variant              10037 non-null  object        \n",
+      " 4   converted            10022 non-null  object        \n",
+      " 5   language_displayed   10037 non-null  object        \n",
+      " 6   language_preferred   10037 non-null  object        \n",
+      " 7   age_group            10037 non-null  object        \n",
+      " 8   date_subscribed      1856 non-null   datetime64[ns]\n",
+      " 9   date_canceled        577 non-null    datetime64[ns]\n",
+      " 10  subscribing_channel  1856 non-null   object        \n",
+      " 11  is_retained          1856 non-null   object        \n",
+      "dtypes: datetime64[ns](3), object(9)\n",
+      "memory usage: 941.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "marketing.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "880c7e38",
+   "id": "3ca1fadc",
    "metadata": {},
    "outputs": [],
    "source": []
