--- a/Automation.ipynb
+++ b/Automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f2b218c6",
+   "id": "049f307f",
    "metadata": {},
    "source": [
     "#### import"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6289a6fc",
+   "id": "9a0769f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d79a2752",
+   "id": "f779ec38",
    "metadata": {},
    "source": [
     "#### read & load dataset"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "50759d0e",
+   "id": "edf78c3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3fc7b258",
+   "id": "4a1757f9",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "843106df",
+   "id": "9c71e85f",
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "c940ee1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conversion_rate():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "98036bd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retention_rate():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3ca1fadc",
+   "id": "e1518a86",
    "metadata": {},
    "outputs": [],
    "source": []
