define plotting method

--- a/Automation.ipynb
+++ b/Automation.ipynb
@@ -257,7 +257,9 @@
    "id": "e1518a86",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def plotting(dataframe)"
+   ]
   }
  ],
  "metadata": {
