complete method conversion_rate()

--- a/Automation.ipynb
+++ b/Automation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a0769f5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "edf78c3b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "4a1757f9",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4           NaT           House Ads        True  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9c71e85f",
    "metadata": {},
    "outputs": [
@@ -231,13 +231,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "c940ee1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conversion_rate():\n",
-    "    pass"
+    "def conversion_rate(dataframe, column_names):\n",
+    "    \"\"\"\n",
+    "    Doc String\n",
+    "    \"\"\"\n",
+    "    # conversion rate = total_converted / total_users\n",
+    "    \n",
+    "    total_converted = dataframe[dataframe['converted'] == True].groupby(column_names)['user_id'].nunique()\n",
+    "    total_users = dataframe.groupby(column_names)['user_id'].nunique()\n",
+    "    \n",
+    "    conversion_rate = total_converted / total_users\n",
+    "    conversion_rate = round(conversion_rate*100, 2)\n",
+    "    \n",
+    "    # Fill missing values with 0\n",
+    "    conversion_rate = conversion_rate.fillna(0)\n",
+    "    \n",
+    "    # Unstack and convert to pd.DataFrame\n",
+    "    conversion_rate = conversion_rate.unstack(1)\n",
+    "    \n",
+    "    return conversion_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "584ffbe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>subscribing_channel</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Facebook</th>\n",
+       "      <th>House Ads</th>\n",
+       "      <th>Instagram</th>\n",
+       "      <th>Push</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date_subscribed</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-02</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-03</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-04</th>\n",
+       "      <td>50.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-05</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-06</th>\n",
+       "      <td>60.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-07</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-08</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-09</th>\n",
+       "      <td>50.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-10</th>\n",
+       "      <td>66.67</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-11</th>\n",
+       "      <td>66.67</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-12</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-13</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-14</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-15</th>\n",
+       "      <td>80.43</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-16</th>\n",
+       "      <td>90.57</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-17</th>\n",
+       "      <td>86.49</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-18</th>\n",
+       "      <td>75.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-19</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-20</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-21</th>\n",
+       "      <td>50.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-22</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-23</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-24</th>\n",
+       "      <td>50.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-25</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-26</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-27</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-28</th>\n",
+       "      <td>66.67</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-29</th>\n",
+       "      <td>50.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-30</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-31</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "subscribing_channel   Email  Facebook  House Ads  Instagram   Push\n",
+       "date_subscribed                                                   \n",
+       "2018-01-01           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-02           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-03           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-04            50.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-05           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-06            60.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-07           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-08           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-09            50.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-10            66.67     100.0      100.0      100.0  100.0\n",
+       "2018-01-11            66.67     100.0      100.0      100.0  100.0\n",
+       "2018-01-12           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-13           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-14           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-15            80.43     100.0      100.0      100.0  100.0\n",
+       "2018-01-16            90.57     100.0      100.0      100.0  100.0\n",
+       "2018-01-17            86.49     100.0      100.0      100.0  100.0\n",
+       "2018-01-18            75.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-19             0.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-20           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-21            50.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-22           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-23           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-24            50.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-25           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-26           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-27           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-28            66.67     100.0      100.0      100.0  100.0\n",
+       "2018-01-29            50.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-30           100.00     100.0      100.0      100.0  100.0\n",
+       "2018-01-31           100.00     100.0      100.0      100.0  100.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conversion_rate(marketing, ['variant', 'age_'])"
    ]
   },
   {
@@ -258,7 +615,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotting(dataframe)"
+    "def plotting(dataframe):\n",
+    "    pass"
    ]
   }
  ],
