complete method retention_rate()

--- a/Automation.ipynb
+++ b/Automation.ipynb
@@ -259,8 +259,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "584ffbe3",
+   "execution_count": 15,
+   "id": "20290091",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>age_group</th>\n",
+       "      <th>0-18 years</th>\n",
+       "      <th>19-24 years</th>\n",
+       "      <th>24-30 years</th>\n",
+       "      <th>30-36 years</th>\n",
+       "      <th>36-45 years</th>\n",
+       "      <th>45-55 years</th>\n",
+       "      <th>55+ years</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>variant</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>control</th>\n",
+       "      <td>8.18</td>\n",
+       "      <td>8.35</td>\n",
+       "      <td>8.62</td>\n",
+       "      <td>9.57</td>\n",
+       "      <td>9.06</td>\n",
+       "      <td>9.06</td>\n",
+       "      <td>10.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>personalization</th>\n",
+       "      <td>23.09</td>\n",
+       "      <td>34.18</td>\n",
+       "      <td>26.92</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>5.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "age_group        0-18 years  19-24 years  24-30 years  30-36 years  \\\n",
+       "variant                                                              \n",
+       "control                8.18         8.35         8.62         9.57   \n",
+       "personalization       23.09        34.18        26.92         4.92   \n",
+       "\n",
+       "age_group        36-45 years  45-55 years  55+ years  \n",
+       "variant                                               \n",
+       "control                 9.06         9.06      10.21  \n",
+       "personalization         4.92         5.12       5.63  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conversion_rate(marketing, ['variant', 'age_group'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "98036bd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retention_rate(dataframe, column_names):\n",
+    "    \"\"\"\n",
+    "    Doc String\n",
+    "    \"\"\"\n",
+    "    # retention rate = total_retained / total_subscribed\n",
+    "    \n",
+    "    total_retained = dataframe[dataframe['is_retained'] == True].groupby(column_names)['user_id'].nunique()\n",
+    "    total_converted = dataframe[dataframe['converted'] == True].groupby(column_names)['user_id'].nunique()\n",
+    "    \n",
+    "    retention_rate = (total_retained / total_converted)\n",
+    "    \n",
+    "    # Fill missing values with 0\n",
+    "    retention_rate = retention_rate.fillna(0)\n",
+    "    \n",
+    "    # Unstack and convert to pd.DataFrame\n",
+    "    retention_rate = retention_rate.unstack(1)\n",
+    "    \n",
+    "    return retention_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9eb9739a",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +410,7 @@
        "      <th>Push</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>date_subscribed</th>\n",
+       "      <th>language_displayed</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -301,311 +420,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-01-01</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>Arabic</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-02</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>English</th>\n",
+       "      <td>0.900901</td>\n",
+       "      <td>0.687783</td>\n",
+       "      <td>0.591603</td>\n",
+       "      <td>0.681034</td>\n",
+       "      <td>0.701299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-03</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>German</th>\n",
+       "      <td>0.853659</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-04</th>\n",
-       "      <td>50.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-05</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-06</th>\n",
-       "      <td>60.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-07</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-08</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-09</th>\n",
-       "      <td>50.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-10</th>\n",
-       "      <td>66.67</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-11</th>\n",
-       "      <td>66.67</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-12</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-13</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-14</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-15</th>\n",
-       "      <td>80.43</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-16</th>\n",
-       "      <td>90.57</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-17</th>\n",
-       "      <td>86.49</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-18</th>\n",
-       "      <td>75.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-19</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-20</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-21</th>\n",
-       "      <td>50.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-22</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-23</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-24</th>\n",
-       "      <td>50.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-25</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-26</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-27</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-28</th>\n",
-       "      <td>66.67</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-29</th>\n",
-       "      <td>50.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-30</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-31</th>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>Spanish</th>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.588235</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "subscribing_channel   Email  Facebook  House Ads  Instagram   Push\n",
-       "date_subscribed                                                   \n",
-       "2018-01-01           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-02           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-03           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-04            50.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-05           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-06            60.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-07           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-08           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-09            50.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-10            66.67     100.0      100.0      100.0  100.0\n",
-       "2018-01-11            66.67     100.0      100.0      100.0  100.0\n",
-       "2018-01-12           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-13           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-14           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-15            80.43     100.0      100.0      100.0  100.0\n",
-       "2018-01-16            90.57     100.0      100.0      100.0  100.0\n",
-       "2018-01-17            86.49     100.0      100.0      100.0  100.0\n",
-       "2018-01-18            75.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-19             0.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-20           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-21            50.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-22           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-23           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-24            50.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-25           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-26           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-27           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-28            66.67     100.0      100.0      100.0  100.0\n",
-       "2018-01-29            50.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-30           100.00     100.0      100.0      100.0  100.0\n",
-       "2018-01-31           100.00     100.0      100.0      100.0  100.0"
+       "subscribing_channel     Email  Facebook  House Ads  Instagram      Push\n",
+       "language_displayed                                                     \n",
+       "Arabic               1.000000       NaN   0.571429        NaN       NaN\n",
+       "English              0.900901  0.687783   0.591603   0.681034  0.701299\n",
+       "German               0.853659       NaN   0.500000        NaN       NaN\n",
+       "Spanish              1.250000  0.000000   0.588235   0.000000       NaN"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conversion_rate(marketing, ['variant', 'age_'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "98036bd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def retention_rate():\n",
-    "    pass"
+    "retention_rate(marketing, ['language_displayed', 'subscribing_channel'])"
    ]
   },
   {
