add segmentation basics

--- a/Automation.ipynb
+++ b/Automation.ipynb
@@ -1301,9 +1301,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33b4b711-7d70-4cc8-8164-86135b2abe4d",
+   "metadata": {},
+   "source": [
+    "### we can segment this to all groups"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380f9659",
+   "id": "c9a2662a-aae5-4d7e-a109-e816dead681f",
    "metadata": {},
    "outputs": [],
    "source": []
